# GeneticTetris

./: .gitignore  CMakeLists.txt  Field.cpp  Field.h  Figure.cpp  Figure.h  IGame.h  LICENSE  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  Tetris.pro  WorkerThread.cpp  WorkerThread.h
arduino/: ArduinoGame.cpp  ArduinoGame.h
console/: ConsoleGame.cpp  ConsoleGame.h
genetic/: Chromosome.cpp  Chromosome.h  Genetic.cpp  Genetic.h  GeneticGame.cpp  GeneticGame.h  util.cpp  util.h
lib/: arduino_utils.h  deps.h  kbhit.h  port.h
main/: ConsoleMain.cpp  GeneticMain.cpp  GeneticMain.h  main.cpp
